--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 MONGODB_URI="mongodb+srv://ermaanish:manish_singh@cluster0.5okciwd.mongodb.net/?retryWrites=true&w=majority" 
+DB_URI="mongodb+srv://ermaanish:manish_singh@cluster0.5okciwd.mongodb.net/?retryWrites=true&w=majority" 
